Added preparation for slash commands